--- a/Birdy/.project
+++ b/Birdy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Wordy</name>
+	<name>Birdy</name>
 	<comment></comment>
 	<projects>
 	</projects>
